  [bug introduced in coreutils-8.21]

  split no longer exits when invocations of a --filter return EPIPE.
  [bug introduced in coreutils-8.26]

  md5sum --check no longer incorrectly enables BSD reversed format mode when
  ignoring some non checksum lines.  This also affects sha*sum and b2sum.
  [bug introduced in coreutils-8.14]

** New features

  split supports a new --hex-suffixes[=from] option to create files with
  lower case hexadecimal suffixes, similar to the --numeric-suffixes option.


* Noteworthy changes in release 8.27 (2017-03-08) [stable]

** Bug fixes

  cp --parents will now set an SELinux context for created directories,
  as appropriate for the -a, --preseve=context, or -Z options.
  [bug present since SELinux support added in coreutils-6.10]

  date again converts from a specified time zone.  Previously output was
  not converted to the local time zone, and remained in the specified one.
  [bug introduced in coreutils-8.26]

  Commands like 'cp --no-dereference -l A B' are no longer quiet no-ops
  when A is a regular file and B is a symbolic link that points to A.
  [bug introduced in fileutils-4.0]

  factor no longer goes into an infinite loop for certain numbers like
  158909489063877810457 and 222087527029934481871.
  [bug introduced in coreutils-8.20]

  tail no longer prints redundant file headers with interleaved inotify events,
  which could be triggered especially when tail was suspended and resumed.
  [bug introduced with inotify support added in coreutils-7.5]

  timeout no longer has a race that may terminate the wrong process.
  The race is unlikely, as timeout(1) needs to receive a signal right
  after the command being monitored finishes.  Also the system needs
  to have reallocated that command's pid in that short time window.
  [bug introduced when timeout was added in coreutils-7.0]

  wc --bytes --files0-from now correctly reports byte counts.
  Previously it may have returned values that were too large,